# speed-of-sound

./: .clang-tidy  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING  Dockerfile  README.md  check-code-style
.circleci/: config.yml
resources/: Speed of Sound theory test.nb
src/: environment.cc  environment.h  speed-of-sound-theory.cc  speed-of-sound-theory.h  speed-of-sound.cc  speed-of-sound.h  speed_of_sound.cc  speed_of_sound.h  speed_of_sound_theory.cc  speed_of_sound_theory.h
test/: speed-of-sound-theory_test.cc  speed-of-sound-theory_test.h  speed-of-sound_test.cc  speed-of-sound_test.h  speed_of_sound_test.cc  speed_of_sound_test.h  speed_of_sound_theory_test.cc  speed_of_sound_theory_test.h  test  test.cc  test.h
